NextGEN Gallery
by Alex Rabe & NextGEN DEV Team

V1.1.0
- NEW : Pagination for album page via custom fields (ngg_paged_Galleries)
- NEW : Define number of columns inside the gallery
- NEW : Added pagination for galleries and images in admin section
- Changed : Added a URL field to setup the path to the Imagerotator
- Changed : Add additional parameter to gallery object
- Bugfix : All albums code couldn't use the slideshow, query is empty for 0
- Bugfix : Htmlentities() for links in the a href title description
- Bugfix : Clean up mode for singlepic

V1.0.2 - 19.12.2008
- Added : Option to enable/disable the MediaRSS Feed
- Added : For flash under FF3/WIN we should use outline: none; 
- Added : Use sort order also for Media RSS
- Changed : Descending order for TinyMCE Editor
- Changed : Added screencolor flashvar as bgcolor for the flash slideshow
- Changed : Remove link to gallery in sidebar widget
- Bugfix : Check for empty gallery title and show name instead
- Bugfix : Album id=all / Album id=0 didn't show content
- Bugfix : Check for a empty description and alttext
- Bugfix : Remove HTML tags from slideshow 
- Bugfix : Load SWFobject always when the imagerotator exist
- Bugfix : Zip-Upload in existing gallery failed
- Bugifx : Typo in functions.php (THX to David Horat)

V1.0.1 - 11.12.2008
- Bugfix : Change upgrade routine, import_date_time could cause a memory problem
- Bugfix : Help pages will not show up in non-english enviroment
- Bugfix : Show gallery name if title is empty

V1.0.0 - 11.12.2008
- NEW : Adding some rewrite rules for the Blog title for a better SEO (Will be continued...)
- NEW : Added ImageMagick support (currently a bit experimental) (THX to Frederic de Ranter) 
- NEW : Automatic unistall via register_uninstall_hook()
- NEW : Added a presort option to sort easier the images
- NEW : Lookup for a nggallery.css in the theme folder
- NEW : Added Date/Time field to database and import it from EXIF, new sort option